# framework_comparison

./: .gitattributes  Dockerfile  app.py
mesa/ants/: TODO.md  agent.py  model.py  run.py  terminal_run.py  visualisation.py
netlogo/CrowdDynamics/: CrowdDynamics.nlogo  CrowdDynamics_plain_code.txt
netlogo/GameOfLife/: GameOfLife_plain_code.txt
netlogo/RedBlackAnts/: Ants.nlogo  Ants_plain_code.txt
separate_dockers/julia-docker/: Dockerfile  run.py
separate_dockers/julia-docker/flowfield/: Dockerfile  FlowField.jl  Main.jl  test0.csv  test1.csv  test2.csv  test3.csv  test4.csv  test5.csv
separate_dockers/julia-docker/gameoflife/: Dockerfile  GameOfLife.jl  Main.jl  run.py
separate_dockers/krabmaga_docker/models/static_field_dir/: Cargo.toml  Dockerfile  run.py
separate_dockers/krabmaga_docker/models/static_field_dir/src/: main.rs
separate_dockers/krabmaga_docker/models/static_field_dir/src/model/: agent.rs  board.rs  constants.rs  mod.rs
separate_dockers/mason-docker/: Dockerfile  run.py
separate_dockers/mesa-docker/: run.py
separate_dockers/mesa-docker/ants_dir/: requirements.txt  run.py
separate_dockers/mesa-docker/game_of_life/: gol_model.py  visual.py
separate_dockers/mesa-docker/game_of_life_dir/: run.py
separate_dockers/mesa-docker/static_field_dir/: Dockerfile  run.py
separate_dockers/netlogo-docker_/: README.md  netlogo_logs.txt  run.py
separate_dockers/repast-docker/: Dockerfile  game_of_life.py  requirements.txt
separate_dockers/unity-docker/Ants/: .dockerignore  Dockerfile  run_all.sh
(+76 files in other folders)
