[package]
name = "static_field"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
krabmaga = { version = "0.4.1" }
array2d = "0.3.0"
clap = "4.4.6"
csv = { version = "1.2.1", features = [] }
[features]
visualization = ["krabmaga/visualization"]
visualization_wasm = ["krabmaga/visualization_wasm"]